@@ -8,6 +8,8 @@ Version 0.8
 
 Not released yet.
 
+- 'allow_unknown' can also be set to a validation schema, in which case unknown
+  fields will be validated against it. Closes nicolaiarocci/eve#405.
 - New function-based custom validation mode (Luo Peng).
 - Fields with empty definitions in schema were reported as non-existent. Now
   they are considered as valid, whatever their value is (Jaroslav Semančík).
